tests/bad/B_ModuleSignature2.ml
module MSig : MSig = struct 
  let f = 3;; 
end;;